--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </p>
       </div>
       <div class="btnn text-center">
-        <a id="cv" target="_blank" href="css/rihab.pdf" class="btn btn-default btn-xl hover" > Téléchargez mon CV !</a>
+        <a target="_blank" href="css/rihab.pdf" class="btn btn-default btn-xl hover" > Téléchargez mon CV !</a>
       </div>
     </div>
     <div class="section" id="competences">
