--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <div class="col large-offset-3 small-col-8 small-offset-2 clear">
         <p>
           <i class="fas fa-square"></i>
-          Remplacements dans les écoles de Nancy et alentours </p> id="header"
+          Remplacements dans les écoles de Nancy et alentours </p>
         </div>
       </div>
       <hr>
@@ -250,13 +250,14 @@
         </li>
       </ul>
     </section>
-    <footer class="text-center bg-dark">
+    <footer class="text-center ">
 
-    <i onclick="myFunction()" class=" iconn fas fa-print"></i>
-    <pre style="margin-top:10px; color:lightgray;">Copyright @ Belkhadiri Rihab</pre>
+    <a href="../"> <i onclick="myFunctions()" class=" iconn fas fa-print"></i></a> <br>
+    <h5>Copyright @ Belkhadiri Rihab</h5>
+
     </footer>
     <script>
-      function myFunction() {
+      function myFunctions() {
         window.print();
       }
     </script>
