--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
           <strong>Développeuse web</strong> curieuse, autonome, rigoureuse,
             j'aime les applications simples, rapides et efficaces.<br><br>Un sens de l'écoute,
             une expertise technique en constante progression grâce à une formation perpétuelle.
-            Motivé par le besoin de faire toujours mieux et appuyé par de solides
+            Motivée par le besoin de faire toujours mieux et appuyé par de solides
             bases acquises lors de mon parcours,
             je prends plaisir à relever de nouveaux challenges.<br><br>
-            Dans le cadre de ma formation en Développement web, je recherche un poste de
+            Dans le cadre de ma formation en développement web, je recherche un poste de
             stagiaire développeur web à compter du 11\05\2020 et pour une durée de 3 semaine.
             Le but de ce stage en entreprise est de consolider mes connaissances et mon savoir-faire
             tout en m'imprégnant du contexte du monde professionnel et de ses contraintes en termes
