--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             Dans le cadre de ma formation, je recherche un poste de
             stagiaire développeur web à compter du 11\05\2020 et pour une durée de 3 semaine.
             Le but de ce stage en entreprise est de consolider mes connaissances et mon savoir-faire
-            tout en m'imprégnant du contexte du monde professionnel et de ses contraintes en termes
+            tout en m'imprégnant du contexte du monde professionnel et de ses contraintes en terme
             de délais.
         </p>
       </div>
