--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta name="description" content="CV d'un développeur web full-stack : développement de sites, applications, PHP, MySQL, MVC, JQuery, Bootstrap,SEO" />
-    <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5dd2fe3521e7da0012a671be&product=sticky-share-buttons&cms=website' async='async'></script>
+    <!-- <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5dd2fe3521e7da0012a671be&product=sticky-share-buttons&cms=website' async='async'></script> -->
     <script async src="https://platform-api.sharethis.com/js/sharethis.js#property=5dd2fe3521e7da0012a671be&product=sticky-share-buttons"></script>
     <meta property="og:url" content="https://belkhadiririhab.net/" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -253,7 +253,7 @@
     <footer class="text-center ">
 
     <a href="../"> <i onclick="myFunctions()" class=" iconn fas fa-print"></i></a> <br>
-    <h5>Copyright @ Belkhadiri Rihab</h5>
+    <h6>Copyright @ Belkhadiri Rihab</h6>
 
     </footer>
     <script>
